Bug 604647: Never create swap chains while the device is lost. r=jrmuizel a=blocking-final